Enhance CORS configuration for multiple origins
Updated CORS settings to support multiple allowed origins by parsing comma-separated values from configuration. Adjusted allowed headers and exposed headers, set max age, and updated production properties and deployment pipeline to reflect new allowed origins for both kidsinmotionpa.org and www.kidsinmotionpa.org.